--- a/docs/.temp/style.styl
+++ b/docs/.temp/style.styl
@@ -1,5 +1,5 @@
 // Parent Theme's Styles
-@import("/Users/fariel/.config/yarn/global/node_modules/@vuepress/theme-default/styles/index.styl")
+@import("/Users/fariel/git/test-docs/docs/node_modules/@vuepress/theme-default/styles/index.styl")
 
 // Theme's Styles
 // null
